<resources>
    <string name="app_name">RunTime</string>
    <string name="welcomeLogin">Welcome to RunTime</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="hintHeight">Height - cm</string>
    <string name="hintWeight">Weight - Kg</string>
    <string name="hintRepeatPassword">Repeat password</string>
    <string name="register">Register</string>
    <string name="welcomeRegister">Create new RunTime account</string>
    <string name="alreadyAnAccount">Have you already an account?</string>
    <string name="buttonCreateAccount">Create account</string>


    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="run">Run</string>
    <string name="title_run">Run</string>
    <string name="title_activity">Activity</string>

    <string name="numberSteps">Nr. Steps</string>
    <string name="workout_break">workout break</string>
    <string name="stop_workout">stop workout</string>
    <string name="start_workout">start workout</string>
    <string name="InitialTextView">-\'--\'\'</string>
    <string name="InitialKMValue">0,00</string>
    <string name="profile">Profile</string>
    <string name="receive_reminders">Receive Reminders</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="lastname">lastname</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="username_text">Username :</string>
    <string name="weight_kg">Weight (kg) :</string>
    <string name="height_cm">Height (cm) :</string>
    <string name="name_text">Name :</string>
    <string name="user_data">User Data</string>
    <string name="last_name_text">Last Name :</string>

    <string name="user_metrics">Please add your metrics for a better experience</string>
    <string name="buttonUpdateUser">Save Metrics</string>


    <string name="welcomeMessage">Opsss... it seems you are new to RunTime\n Take a run and we will display your overall performance here </string>


</resources>