<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/welcomeRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/welcomeRegister"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="172dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hintUsername"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername">

            <EditText
                android:id="@+id/weight"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/hintWeight"
                android:inputType="numberDecimal"
                android:paddingHorizontal="20dp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/hintHeight"
                android:inputType="number"
                android:paddingHorizontal="20dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hintRepeatPassword"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/alreadyAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:gravity="center_vertical"
            android:text="@string/alreadyAnAccount"
            android:textColor="@color/material_dynamic_primary0"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.918"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPassword"
            app:layout_constraintVertical_bias="0.341" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:background="@drawable/edit_text_background"
            android:paddingHorizontal="10dp"
            android:text="@string/buttonCreateAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>