<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/user_metrics"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.065" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="317dp"
            android:layout_height="198dp"
            android:layout_marginTop="208dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <EditText
                android:id="@+id/weight"
                android:layout_width="283dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/hintWeight"
                android:inputType="numberDecimal"
                android:paddingHorizontal="20dp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="283dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/hintHeight"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="30dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/saveMetricsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/edit_text_background"
            android:paddingHorizontal="10dp"
            android:text="@string/buttonUpdateUser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>